traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:3: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return false
  ^Snake:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                      return true }
                             ^Snake:8: warning: enclosing method fonctionTest has result type Unit: return value discarded
                      return true }
                      ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                      return true}
                             ^Snake:13: warning: enclosing method fonctionTest has result type Unit: return value discarded
                      return true}
                      ^Snake:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:17: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return false
  ^Snake:25: error: value unary_! is not a member of Unit
    }while(!fonctionTest())
           ^